@@ -1,2 +1,3 @@
 # project_thltm
 THLTM-HUST
+--module-path "C:\Java\javafx-sdk-17.0.1\lib" --add-modules javafx.controls,javafx.fxml
